Fix: Advanced column - Content shifting left issue. (#1095)
* Fix issue of columns-shifting to left and undefined attribute in Html
* Remove flex for wrap causing the issue when columns are set to one and content inside

--- a/src/blocks/columns/editor.lazy.scss
+++ b/src/blocks/columns/editor.lazy.scss
@@ -175,8 +175,8 @@
 		display: flex;
 		flex-wrap: nowrap;
 		justify-content: space-between;
-		margin-left: 0;
-		margin-right: 0;
+		margin-left: auto;
+		margin-right: auto;
 
 		> [data-type="uagb/column"] {
 			display: flex;
