--- a/src/blocks/columns/style.scss
+++ b/src/blocks/columns/style.scss
@@ -15,6 +15,8 @@
 
 .uagb-columns__wrap {
 	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 
 	.uagb-columns__overlay,
 	.uagb-columns__video-wrap {
@@ -45,13 +47,6 @@
 		-o-object-fit: cover;
 		object-fit: cover;
 		background-size: cover;
-	}
-
-	.uagb-column__wrap {
-		display: -webkit-box;
-		display: -webkit-flex;
-		display: -ms-flexbox;
-		display: flex;
 	}
 
 	.uagb-columns__shape {
